# gossamer

./: .gitignore  Cargo.toml  README.md  justfile
apps/comic/: index.html  index.js  metadata.yaml
crates/app-viewer/: Cargo.toml
crates/app-viewer/files/: index.css  index.html  metadata.yaml
crates/app-viewer/src/: app.rs  main.rs  state.rs
crates/app-viewer/templates/: app.html
crates/comic/: Cargo.toml
crates/comic-viewer/: Cargo.toml
crates/comic-viewer/files/: index.css  index.html
crates/comic-viewer/src/: comic.rs  main.rs  state.rs
crates/comic/files/: metadata.yaml
crates/comic/src/: comic.rs
crates/comic/templates/: comic.html
crates/hypermedia/: Cargo.toml
crates/hypermedia/js/: define.js
crates/hypermedia/src/: api.rs  cast.rs  component.rs  dialog.rs  error.rs  event_target_ext.rs  js.rs  lib.rs  macros.rs  select.rs
crates/hypermedia/templates/: dialog.html
crates/library-viewer/: Cargo.toml
crates/library-viewer/files/: index.css  index.html  metadata.yaml
crates/library-viewer/src/: library.rs  main.rs  state.rs  templates.rs  view.rs
crates/library-viewer/templates/: library.html  node.html  search.html
crates/media/: Cargo.toml
crates/media/src/: api.rs  cbor.rs  contact.rs  hash.rs  lib.rs  manifest.rs  media.rs  peer.rs  ty.rs
crates/root/: Cargo.toml  justfile
crates/root/files/: index.html
crates/root/js/: define.js
crates/root/src/: component.rs  ext.rs  js.rs  main.rs  media_library.rs
crates/root/templates/: media-library.html
files/: index.js
src/: api.rs  cbor.rs  deserialize_from_str.rs  distance.rs  error.rs  from_cbor.rs  hash.rs  id.rs  into_u64.rs  library.rs  main.rs  manifest.rs  media.rs  message.rs  metadata.rs  node.rs  package.rs  passthrough.rs  path_ext.rs  payload.rs  peer.rs  re.rs  read_ext.rs  report.rs  response.rs  subcommand.rs  target.rs  template.rs  templates.rs  test.rs  to_cbor.rs  ty.rs  unverified_endpoint.rs  write_ext.rs
src/subcommand/: package.rs  server.rs
src/subcommand/server/: server_error.rs  target_validator.rs  templates.rs
static/: index.css
templates/: node.html  package.html  page.html  root.html  search.html
