[package]
name = "gossamer"
description = "media server"
version = "0.0.0"
license = "CC0-1.0"
edition = "2021"
homepage = "https://github.com/casey/gossamer"
repository = "https://github.com/casey/gossamer"

[workspace]
members = [".", "crates/*"]

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
axum-server = "0.6.0"
boilerplate = { version = "1.0.0", features = ["axum"] }
bytes = "1.6.1"
camino = "1.1"
ciborium = "0.2"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.3"
hex = "0.4.3"
html-escaper = "0.2.0"
libc = "0.2.155"
log = "0.4.22"
media = { path = "crates/media" }
mime_guess = "2.0.4"
open = "5.2.0"
quinn = "0.11.2"
quinn-proto = "0.11.3"
rand = "0.8.5"
rcgen = "0.13.1"
regex = "1.10.5"
regex_static = "0.1.1"
rust-embed = "8.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.119"
serde_yaml = "0.9.34"
snafu = { version = "0.8.3", features = ["backtrace"] }
socket2 = "0.5.7"
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["propagate-header", "set-header", "validate-request"] }
walkdir = "2.5"

[profile.dev]
panic = 'abort'
