[package]
name = "gossamer"
description = "media server"
version = "0.0.0"
license = "CC0-1.0"
edition = "2021"
homepage = "https://github.com/casey/gossamer"
repository = "https://github.com/casey/gossamer"

[dependencies]
axum = { version = "0.7", features = ["http2"] }
axum-server = "0.7"
blake3 = "1"
boilerplate = { version = "1", features = ["axum"] }
bytes = "1"
camino = "1"
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
hex = "0.4"
html-escaper = "0.2"
libc = "0.2"
log = "0.4"
mime_guess = "2"
open = "5"
quinn = "0.11"
quinn-proto = "0.11"
rand = "0.8"
regex = "1"
regex_static = "0.1"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_yaml = "0.9"
snafu = { version = "0.8", features = ["backtrace"] }
socket2 = "0.5"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }
walkdir = "2"
