[package]
name = "hypermedia"
version = "0.0.0"
edition = "2021"
description = "hypermedia utilities"
license = "CC0-1.0"
homepage = "https://github.com/casey/gossamer"
repository = "https://github.com/casey/gossamer"

[dependencies]
boilerplate = "1"
console_error_panic_hook = "0.1"
console_log = "1"
html-escaper = "0.2"
js-sys = "0.3"
log = "0.4"
snafu = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "DocumentFragment",
  "DomParser",
  "Element",
  "NodeList",
  "ShadowRoot",
  "SupportedType",
]
