[package]
name = "hypermedia"
version = "0.0.0"
edition = "2021"
description = "hypermedia utilities"
license = "CC0-1.0"
homepage = "https://github.com/casey/gossamer"
repository = "https://github.com/casey/gossamer"

[dependencies]
ciborium = "0.2"
console_error_panic_hook = "0.1"
console_log = "1"
js-sys = "0.3"
log = "0.4"
media = { path = "../media" }
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
snafu = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "HtmlBodyElement",
  "HtmlElement",
  "Location",
  "Window",
]
