[package]
name = "library-viewer"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
futures = "0.3.30"
hypermedia = { path = "../hypermedia" }
xilem_web = { git = "https://github.com/linebender/xilem.git" }

[dependencies.web-sys]
version = "0.3"
features = [
  "CssStyleDeclaration",
  "Document",
  "DomStringMap",
  "HtmlButtonElement",
  "HtmlDivElement",
  "HtmlIFrameElement",
  "HtmlInputElement",
  "InputEvent",
  "PointerEvent",
]
