[package]
name = "library-viewer"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
hypermedia = { path = "../hypermedia" }
xilem_web = { path = "../../../xilem/xilem_web" }

[dependencies.web-sys]
version = "0.3"
features = [
  "CssStyleDeclaration",
  "Document",
  "DomStringMap",
  "HtmlButtonElement",
  "HtmlDivElement",
  "HtmlIFrameElement",
  "HtmlInputElement",
  "InputEvent",
  "PointerEvent",
]
