[package]
name = "media"
version = "0.0.0"
edition = "2021"

[dependencies]
blake3 = { version = "1.5.0", features = ["serde"] }
ciborium = "0.2"
js-sys = "0.3.69"
reqwest = "0.12.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.15"
snafu = "0.8.3"
strum = { version = "0.26.3", features = ["derive"] }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["Location", "Window", "console"] }

[dev-dependencies]
serde_json = "1.0.120"
